--- a/package.json
+++ b/package.json
@@ -24,13 +24,21 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.21",
     "aws-sdk": "^2.1692.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.515.0",
     "mongodb": "^6.17.0",
     "next": "15.3.3",
+    "nodemailer": "^7.0.3",
     "postcss": "^8.5.5",
     "prisma": "^6.9.0",
     "react": "^19.0.0",
