--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -30,6 +31,7 @@
     "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.21",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -38,12 +40,15 @@
     "lucide-react": "^0.515.0",
     "mongodb": "^6.17.0",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
     "postcss": "^8.5.5",
     "prisma": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.67"
