--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
+    "@auth/core": "^0.34.2",
+    "@auth/prisma-adapter": "^1.0.5",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -42,7 +43,7 @@
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.3",
+    "nodemailer": "^6.9.3",
     "postcss": "^8.5.5",
     "prisma": "^6.10.1",
     "react": "^19.0.0",
