Update: Add Supabase SDK and UUID package to dependencies; enhance LandingPage component with user authentication handling and responsive design improvements; implement application statistics fetching in DashboardPage; refactor file upload logic in ApplicationForm for better error handling; introduce email sending functionality for application confirmations; and expand Prisma schema to support application management.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@react-oauth/google": "^0.12.2",
+    "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
@@ -50,6 +51,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
@@ -58,6 +60,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.0.0",
     "eslint-config-next": "15.3.3",
